# Informatik-pro-

./: CMakeLists.txt  README.md  aufgabe  blatt1  blatt2  blatt4  blatt5
aufgabe 7/src/app/: game.cpp  init.h  main.cpp  test.cpp  test.h
aufgabe 7/src/libGameObjects/: Constants.h  Missile.cpp  PlayerSea.h  Ship.h
aufgabe 7/src/libSea/: CMakeLists.txt  Coordinates.h
aufgabett/: README.md
blatt10/: CMakeLists.txt  main.cpp
first1/src/: second2.java
src/: CMakeLists.txt  new.py
src/app/: CMakeLists.txt  game.cpp  game.h  game.inl  init.cpp  init.h  main.cpp  utils.cpp  utils.h
src/libGameObjects/: Attack.h  CMakeLists.txt  Constants.h  DoubleMissile.cpp  DoubleMissile.h  Missile.cpp  Missile.h  Output.cpp  Output.h  PlayerSea.cpp  PlayerSea.h  PlayerSea_output.cpp  PlayerSea_stats.cpp  Ship.cpp  Ship.h  TumblingMissile.cpp  TumblingMissile.h  Vortex.cpp  Vortex.h
src/libSea/: CMakeLists.txt  Coordinates.cpp  Coordinates.h  Coordinates.inl  Grid2D.h  Grid2D.inl  Object.cpp  Object.h
test projeckt/: .project
test projeckt/src/test/: helloworld.java
